Changed the API to return Base64 encoded list of PEMs, and to expect Base64 encoded csr